Better naming scheme, consistent formatting. - Using MySQL instead of mysql, using result_skill instead of just result - Better code format, use (double quote)  instead of (single quote) wrap if-statement, imports in paranthesis, etc... - Added dependency for functions (moved to functions.py) - Fixed an issue where the footer is different colour than the rest. - Added items and skills data

--- a/modules/static/css/style.css
+++ b/modules/static/css/style.css
@@ -7,8 +7,7 @@ body {
   width: 100%;
   bottom: 0;
   left: 0;
-  background: #222;
-  color: white;
+  background: #343a40;
 }
 
 
